add nginx in front of dsapid

--- a/copy/opt/dsapid/ui/index.html
+++ b/copy/opt/dsapid/ui/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>datasets.at</title>
+	<title>qutic development</title>
 
 	<link rel="stylesheet" href="css/app.css" />
 </head>
@@ -20,7 +20,7 @@
 				<a class="nav-location" href="#!/about">About</a>
 			</ul>
 
-			<h2 class="text-muted">datasets.at</h2>
+			<h2 class="text-muted">qutic development</h2>
 		</header>
 
 		<hr />
